# design-patterns-cheat

./: .gitignore  .gitmodules  CMakeLists.txt  bootstrap.sh
src/bridge/: Person.cpp  Person.h  Person_Test.cpp  Pimpl.h  ShapeRenderer.h  ShapeRenderer_Test.cpp
src/builder/: CodeBuilder.cpp  CodeBuilder.h  CodeBuilder_Test.cpp
src/chain_of_responsability/: GameChain.h  GameChain_Test.cpp
src/command/: BankAccount.h  BankAccount_Test.cpp
src/composite/: Creature.h  Creature_Test.cpp  Graphics.h  Graphics_Test.cpp  Neuron.h  Neuron_Test.cpp
src/decorator/: DynamicShapeDecorator_Test.cpp  Logger.h  Logger_Test.cpp  ShapeDecorator.h  StaticShapeDecorator.cpp
src/flyweight/: TextFormatter.h  TextFormatter_Test.cpp  UserFlyweight_Test.cpp  UserFlyweight_Test.h
src/fundamental/: Product.h  Product_Test.cpp
src/singleton/: SingletonDB.h  SingletonDB_Test.cpp
